...
  const KanjiWord(this.word, this.hiragana, [this.pos = '']);
}

/// 汉字 -> 常见词列表 (已按常用度排序, 每字至多 8 个)。
/// 查不到的汉字不在表中, 调用方按空列表处理。
const Map<String, List<KanjiWord>> kanjiWordsDict = {
  '日': [KanjiWord('日本', 'にっぽん', '名詞'), KanjiWord('日々', 'ひび', '名詞'), KanjiWord('日日', 'ひび', '名詞'), KanjiWord('十年一日', 'じゅうねんいちじつ', '名詞'), KanjiWord('日本一', 'にっぽんいち', '名詞'), KanjiWord('一日中', 'いちにちじゅう', '名詞'), KanjiWord('日本人', 'にっぽんじん', '名詞'), KanjiWord('本日', 'ほんじつ', '名詞')],
  '一': [KanjiWord('一国', 'いっこく', '名詞'), KanjiWord('一人', 'ひとり', '名詞'), KanjiWord('十年一日', 'じゅうねんいちじつ', '名詞'), KanjiWord('日本一', 'にっぽんいち', '名詞'), KanjiWord('一大', 'いちだい', '名詞'), KanjiWord('一日中', 'いちにちじゅう', '名詞'), KanjiWord('一年中', 'いちねんじゅう', '名詞'), KanjiWord('三国一', 'さんごくいち', '名詞')],
  '国': [KanjiWord('一国', 'いっこく', '名詞'), KanjiWord('国々', 'くにぐに', '名詞'), KanjiWord('国会', 'こっかい', '名詞'), KanjiWord('国人', 'くにびと', '名詞'), KanjiWord('国大', 'こくだい', '名詞'), KanjiWord('大国', 'たいこく', '名詞'), KanjiWord('三国一', 'さんごくいち', '名詞'), KanjiWord('中国人', 'ちゅうごくじん', '名詞')],
  '会': [KanjiWord('会社', 'かいしゃ', '名詞'), KanjiWord('国会', 'こっかい', '名詞'), KanjiWord('会う', 'あう', '動詞'), KanjiWord('会す', 'かいす', '動詞'), KanjiWord('会える', 'あえる', '動詞'), KanjiWord('会わす', 'あわす', '動詞'), KanjiWord('年会', 'ねんかい', '名詞'), KanjiWord('大会', 'たいかい', '名詞')],
  '人': [KanjiWord('一人', 'ひとり', '名詞'), KanjiWord('国人', 'くにびと', '名詞'), KanjiWord('人々', 'ひとびと', '名詞'), KanjiWord('人人', 'ひとびと', '名詞'), KanjiWord('人なれる', 'ひとなれる', '動詞'), KanjiWord('人がましい', 'ひとがましい', '形容詞'), KanjiWord('人なつこい', 'ひとなつこい', '形容詞'), KanjiWord('人なつかしい', 'ひとなつかしい', '形容詞')],
  '年': [KanjiWord('十年一日', 'じゅうねんいちじつ', '名詞'), KanjiWord('年会', 'ねんかい', '名詞'), KanjiWord('年々', 'ねんねん', '名詞'), KanjiWord('年年', 'ねんねん', '名詞'), KanjiWord('一年中', 'いちねんじゅう', '名詞'), KanjiWord('本年', 'ほんねん', '名詞'), KanjiWord('中年', 'ちゅうねん', '名詞'), KanjiWord('年中', 'ねんじゅう', '名詞')],
  '大': [KanjiWord('大学', 'だいがく', '名詞'), KanjiWord('大阪', 'おおさか', '名詞'), KanjiWord('一大', 'いちだい', '名詞'), KanjiWord('国大', 'こくだい', '名詞'), KanjiWord('大国', 'たいこく', '名詞'), KanjiWord('大会', 'たいかい', '名詞'), KanjiWord('大人', 'おとな', '名詞'), KanjiWord('大人しい', 'おとなしい', '形容詞')],
...
